WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305568
Fix libproc build error on non-Apple builds
https://bugs.webkit.org/show_bug.cgi?id=305568
Summary
Fix libproc build error on non-Apple builds
Justin Michaud
Reported
2026-01-15 08:53:38 PST
Fix libproc build error on non-Apple builds
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2026-01-15 08:54:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56640
EWS
Comment 2
2026-01-15 14:45:09 PST
Committed
305674@main
(ff4078fa7733): <
https://commits.webkit.org/305674@main
> Reviewed commits have been landed. Closing PR #56640 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-15 14:46:12 PST
<
rdar://problem/168258242
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug