Fix libproc build error on non-Apple builds https://bugs.webkit.org/show_bug.cgi?id=305568

Reviewed by Chris Dumez.

Canonical link: https://commits.webkit.org/305674@main